--- a/src/CreateSingleVMForm.css
+++ b/src/CreateSingleVMForm.css
@@ -13,8 +13,8 @@
     margin-bottom: 15px;
   }
   
-  .form-input {
-    width: 75%; /* Reduced width */
+  .form-input-small {
+    width: 75%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -33,14 +33,14 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 10px;
-    margin-top: 15px; /* Reduced margin */
+    margin-top: 15px;
     background-color: #fff;
   }
   
   .btn-add,
   .btn-remove {
     margin-top: 10px;
-    padding: 8px 16px; /* Adjusted padding */
+    padding: 8px 16px;
   }
   
   .btn-submit {
@@ -53,3 +53,19 @@
     margin-top: 20px;
   }
   
+  /* Style for error highlighting */
+  .error .form-input-small {
+    border-color: red;
+  }
+ 
+  .error {
+    color: red;
+  }
+  
+  .form-input-small.error {
+    border-color: red;
+  }
+
+  .form-textarea {
+    width: 100%; /* Adjust the width as needed */
+  }
